@@ -48,7 +48,7 @@ object-oriented programming language, etc.</p>
 </div>
 </td>
 <td width="20%" valign="top">
-<!--  RIGHT-HAND SIDE TEXT HERE -->
+<img src="banners/banner1.png"/>
 </td>
 </tr>
 </tbody>
@@ -64,7 +64,7 @@ width="210" height="62" border="0" align="right" alt=
 "SourceForge.net Logo"></a>
 </td><td style="vertical-align: bottom; text-align: right; font-size: smaller;">
 <a href="#top">back to top</a><br/>
-This page was last updated: $Date: 2004/02/02 17:22:41 $
+This page was last updated: $Date: 2004/02/09 15:25:11 $
 </td></tr></tbody></table>
 </body>
 </html>
