@@ -10,9 +10,10 @@
 <a name="top"/>
 <div align="center">
 <table width="60%" class="menu"><tr>
-<td width="33%"><a class="toc" target="_top" href="index.html">General</a></td>
-<td width="33%"><a class="toc" target="_top" href="language.html">Language</a></td>
-<td width="33%"><a class="toc" target="_top" href="development.html">Development</a></td>
+<td width="25%"><a class="toc" target="_top" href="index.html">General</a></td>
+<td width="25%"><a class="toc" target="_top" href="language.html">Language</a></td>
+<td width="25%"><a class="toc" target="_top" href="development.html">Development</a></td>
+<td width="25%"><a class="toc" target="_top" href="download.html">Download</a></td>
 </tr></table>
 </div>
 </body>
